New flag to track only a single taint tag for every value in an array